--- a/UserSQL/config.json
+++ b/UserSQL/config.json
@@ -1,26 +1,26 @@
 /* This is a JSON format configuration file
  */
 {
-    /*
+    
     //ssl:The global SSL settings. "key" and "cert" are the path to the SSL key and certificate. While
     //    "conf" is an array of 1 or 2-element tuples that supplies file style options for `SSL_CONF_cmd`.
-    "ssl": {
+    /*"ssl": {
         "cert": "../../trantor/trantor/tests/server.crt",
         "key": "../../trantor/trantor/tests/server.key",
         "conf": [
             //["Options", "-SessionTicket"], 
             //["Options", "Compression"]
         ]
-    },
+    },*/
     "listeners": [
         {
             //address: Ip address,0.0.0.0 by default
             "address": "0.0.0.0",
             //port: Port number
-            "port": 80,
+            "port": 5555,
             //https: If true, use https for security,false by default
             "https": false
-        },
+        }/*
         {
             "address": "0.0.0.0",
             "port": 443,
@@ -34,7 +34,7 @@
             "ssl_conf": [
                 //["MinProtocol", "TLSv1.3"]
             ]
-        }
+        }*/
     ],
     "db_clients": [
         {
@@ -56,7 +56,7 @@
             "passwd": "yourpassword",
             //is_fast: false by default, if it is true, the client is faster but user can't call
             //any synchronous interface of it.
-            "is_fast": true,
+            "is_fast": false, 
             //client_encoding: The character set used by the client. it is empty string by default which 
             //means use the default character set.
             //"client_encoding": "",
@@ -74,7 +74,7 @@
             //"connect_options": { "statement_timeout": "1s" }
         }
     ],
-    "redis_clients": [
+    /*"redis_clients": [
         {
             //name: Name of the client,'default' by default
             "name": "default",
