--- a/UserSQL/config.json
+++ b/UserSQL/config.json
@@ -49,11 +49,11 @@
             //port: Server port, 5432 by default
             "port": 5432,
             //dbname: Database name
-            "dbname": "mydb",
+            "dbname": "mydb2",
             //user: 'postgres' by default
-            "user": "saugat",
+            "user": "myuser2",
             //passwd: '' by default
-            "passwd": "yourpassword",
+            "passwd": "mypassword",
             //is_fast: false by default, if it is true, the client is faster but user can't call
             //any synchronous interface of it.
             "is_fast": false, 
